Improved by converting the BlockingCollection into a collection of Pulse objects rather than int. Moved the task creation into a loop to reduce the duplication.

--- a/AS.BlockingCollectionDemo.ConsoleUI/AS.BlockingCollectionDemo.ConsoleUI.csproj
+++ b/AS.BlockingCollectionDemo.ConsoleUI/AS.BlockingCollectionDemo.ConsoleUI.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{AF420305-C88F-4897-ABB8-7A24D9B0F349}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication3</RootNamespace>
-    <AssemblyName>ConsoleApplication3</AssemblyName>
+    <RootNamespace>AS.BlockingCollectionDemo.ConsoleUI</RootNamespace>
+    <AssemblyName>AS.BlockingCollectionDemo.ConsoleUI</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Pulse.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
